--- a/src/app/styles/animate.css
+++ b/src/app/styles/animate.css
@@ -5,21 +5,27 @@
 }
 
 .slide-down {
-  opacity: 0.8;
+  opacity: 0;
   transform: translateY(-100px);
-  transition: opacity 0.7s ease, transform 0.7s ease;
+  transition: opacity 0.5s ease, transform 0.7s ease;
 }
 
 .slide-up-hero {
-  opacity: 1;
+  opacity: 0;
   transform: translateY(100px);
-  transition: opacity 0.7s ease, transform 0.7s ease;
+  transition: opacity 0.5s ease, transform 0.7s ease;
 }
 
 .slide-up-soft {
   opacity: 0.5;
   transform: translateY(100px);
   transition: opacity 0.7s ease, transform 0.7s ease;
+}
+
+.slide-up-bit {
+  opacity: 0;
+  transform: translateY(70px);
+  transition: opacity 0.3s ease, transform 0.7s ease;
 }
 
 .slide-right {
@@ -29,9 +35,9 @@
 }
 
 .slide-left {
-  opacity: 0.8;
+  opacity: 0;
   transform: translateX(100px);
-  transition: opacity 0.7s ease, transform 0.7s ease;
+  transition: opacity 0.5s ease, transform 0.7s ease;
 }
 
 .visible {
